--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,27 +58,16 @@ services:
     volumes:
       - ./frontend:/app
     working_dir: /app
-    command: sh -c "npm install"
-    entrypoint: ["npm", "run", "dev"]
-    ports:
-      - 5173:5173
-
-vue-ui:
-    image: node:19.2.0-alpine3.16
-    volumes:
-      - ./frontend:/app
-    working_dir: /app
-    command: sh -c "npm install"
-    entrypoint: ["npm", "run", "dev"]
+    command: sh -c "npm install && npm run dev"
     ports:
       - 5173:5173
     networks:
-        - default
+        - dev
 
 networks:
     dev:
-    default:
         driver: bridge
+
 volumes:
     db-data:
     
