--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,10 +57,13 @@ services:
     image: node:19.2.0-alpine3.16
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     working_dir: /app
     command: sh -c "npm install && npm run dev"
     ports:
       - 5173:5173
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     networks:
         - dev
 
