--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,8 @@ FROM node:18-alpine as builder_base
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 RUN apk add --no-cache libc6-compat
 
+RUN apk add --no-cache bash
+
 WORKDIR /srv/app
 
 # Deps stage, preserve dependencies in cache as long as the lockfile isn't changed
