register/login get token

--- a/api/.env
+++ b/api/.env
@@ -24,7 +24,7 @@ APP_SECRET=5933810ac5251ab27624931d8ef98dae
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@db_docker_symfony:3306/messengerApp?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root@db_docker_symfony:3306/challenge?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -37,3 +37,26 @@ JWT_PASSPHRASE=febaaef398f3d78099698c5347a804a3
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+PWD_EMAIL_SMTP=fx8KA5a4x7sL7E
+PWD_EMAIL_USER=myproject.codeur@gmail.com
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://myproject.codeur@gmail.com:fx8KA5a4x7sL7E@smtp.gmail.com:465 
+MAILER_DSN=smtp://e2b0a57edce928:627cb92ed4dce0@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
+
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://myproject.codeur@gmail.com:fx8KA5a4x7sL7E@localhost?verify_peer=0
+
+###< symfony/google-mailer ###
+CLIENT_URL_HOME=http://localhost:5173/
+CLIENT_URL_REGISTER=http://localhost:5173/register
+CLIENT_URL_LOGIN=http://localhost:5173/login
+CLIENT_URL_404=http://localhost:5173/error
+
