--- a/api/php/vhosts/vhosts.conf
+++ b/api/php/vhosts/vhosts.conf
@@ -8,7 +8,6 @@
         AllowOverride None
         Order Allow,Deny
         Allow from All
-
         FallbackResource /index.php
     </Directory>
 
@@ -31,4 +30,5 @@
     #SetEnv APP_ENV prod
     #SetEnv APP_SECRET <app-secret-id>
     #SetEnv DATABASE_URL "mysql://db_user:db_pass@host:3306/db_name"
+    Header set Access-Control-Allow-Origin "*"
 </VirtualHost>
