--- a/api/composer.json
+++ b/api/composer.json
@@ -23,21 +23,25 @@
         "symfony/flex": "^2",
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/google-mailer": "6.1.*",
+        "symfony/mailer": "6.1.*",
+        "symfony/mailgun-mailer": "6.1.*",
         "symfony/property-access": "6.1.*",
         "symfony/property-info": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
-        "symfony/runtime": "^6.2",
+        "symfony/runtime": "6.1.3",
         "symfony/security-bundle": "6.1.*",
         "symfony/serializer": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
-        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.1.*",
-        "symfonycasts/verify-email-bundle": "1.11.0"
+        "symfonycasts/verify-email-bundle": "^1.13"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "symfony/maker-bundle": "^1.47"
+        "symfony/maker-bundle": "^1.47",
+        "symfony/stopwatch": "6.1.*",
+        "symfony/web-profiler-bundle": "6.1.*"
     },
     "config": {
         "allow-plugins": {
