--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -32,12 +32,19 @@ security:
             stateless: true
             json_login:
                 check_path: /api/login_check
+                username_path: username
+                password_path: password
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
         api:
-            pattern: ^/api
+            pattern:   ^/api
             stateless: true
             jwt: ~
+
+        register:
+            pattern: ^/api/users/
+            stateless: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
