--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    vuejs.home: '%env(CLIENT_URL_HOME)%'
+    vuejs.register: '%env(CLIENT_URL_REGISTER)%'
+    vuejs.login: '%env(CLIENT_URL_LOGIN)%'
+    vuejs.404: '%env(CLIENT_URL_404)%'
 
 services:
     # default configuration for services in *this* file
@@ -11,7 +15,7 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
+    # makes classes in src/ available to be used as ser(vices
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
@@ -24,3 +28,13 @@ services:
         arguments: ['@.inner']
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventListener\LoginSuccessListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onLoginSuccess }
+        
+    tenant_user_service:
+        class: App\Services\UserService
+        arguments: [ '@security.token_storage' ]
+
+        
