did subscription tested working and saving in db the subscription and invoice with qtripe using webhooks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
         - db-data:/var/lib/mariadb
     environment:
+        MARIADB_DATABASE: challenge
         MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 'yes'
     networks:
         - dev
