--- a/api/composer.json
+++ b/api/composer.json
@@ -18,6 +18,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.13",
         "stof/doctrine-extensions-bundle": "*",
+        "stripe/stripe-php": "^10.4",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
