hashpassword fixing + resend email

--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -44,3 +44,7 @@ services:
     App\Repository\SubscriptionRepository:
         autowire: true
         tags: ['doctrine.repository_service']
+
+    App\Entity\UserPasswordHasher:
+        bind:
+            $processor: '@api_platform.doctrine.orm.state.persist_processor'
