--- a/api/composer.json
+++ b/api/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/core": "^3.0",
+        "aws/aws-sdk-php": "^3.258",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
@@ -19,6 +20,7 @@
         "phpstan/phpdoc-parser": "^1.13",
         "stof/doctrine-extensions-bundle": "*",
         "stripe/stripe-php": "^10.4",
+        "symfony/amazon-mailer": "6.1.*",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/dotenv": "6.1.*",
