edited subscription for company and freelance and made fixture for the whole app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
         - dev
 
   www:
-    build: php
+    build: ./api/php
     container_name: www_docker_symfony
     ports:
       - "8741:80"
