--- a/api/php/Dockerfile
+++ b/api/php/Dockerfile
@@ -15,12 +15,8 @@ RUN echo "en_US.UTF-8 UTF-8" > /etc/locale.gen && \
 
 RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
    mv composer.phar /usr/local/bin/composer
-RUN a2enmod headers
+RUN a2enmod headers rewrite
+
 RUN docker-php-ext-configure intl
 RUN docker-php-ext-install pdo pdo_mysql gd opcache intl zip calendar dom mbstring zip gd xsl
 RUN pecl install apcu && docker-php-ext-enable apcu
-
-
-WORKDIR /var/www/
-
-CMD composer i -o ; wait-for-it db_docker_symfony:3306 -- bin/console doctrine:migrations:migrate ;  php
