--- a/api/.gitignore
+++ b/api/.gitignore
@@ -10,6 +10,6 @@ node_modules
 ###< symfony/framework-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
-/config/jwt/*.pem
+# /config/jwt/*.pem
 ###< lexik/jwt-authentication-bundle ###
 /migrations/
