--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,57 @@
-version: '3'
+version: '3.8'
 
 services:
-  database:
-    image: mysql:8.0
+  db:
+    image: mysql:8
     container_name: db_docker_symfony
     restart: always
     volumes:
-        - db-data:/var/lib/mysql
+        - db-data:/var/lib/mariadb
     environment:
-        MYSQL_DATABASE: challenge
-        MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    ports:
-      - "3306:3306"
+        MYSQL_ROOT_PASSWORD: challenge
+        MYSQL_ALLOW_EMPTY_ROOT_PASSWORD: 'yes'
     networks:
         - dev
+
+  php-fpm:
+    container_name: php-fpm
+    build:
+      context: ./docker/php-fpm
+    depends_on:
+      - db
+    volumes:
+      - ./api/:/var/www
+
   phpmyadmin:
     image: phpmyadmin
     container_name: phpmyadmin_docker_symfony
     restart: always
     depends_on:
-        - database
+        - db
     ports:
         - 8082:80
     environment:
-        PMA_HOST: database
+        PMA_HOST: db
     networks:
         - dev
+    volumes:
+      - ./mysql:/var/lib/mysql
 
-  maildev:
-    image: maildev/maildev
-    container_name: maildev_docker_symfony
-    command: bin/maildev --web 80 --smtp 25 --hide-extensions STARTTLS
-    ports:
-      - "8081:80"
-    restart: always
-    networks:
-        - dev
-
-  www:
-<<<<<<< HEAD
-    build: ./api/php
-=======
+  nginx:
+    container_name: nginx
     build:
-      context: ./api/php
-      dockerfile: Dockerfile
->>>>>>> origin/feature/admin
-    container_name: www_docker_symfony
+      context: ./docker/nginx
+    volumes:
+      - ./api/:/var/www
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./docker/nginx/sites/:/etc/nginx/sites-available
+      - ./docker/nginx/conf.d/:/etc/nginx/conf.d
+      - ./docker/logs:/var/log
+    depends_on:
+      - php-fpm
     ports:
       - "8741:80"
-    volumes:
-        - ./api/php/vhosts:/etc/apache2/sites-enabled
-        - ./:/var/www
-    restart: always
-    networks:
-        - dev
+      - "443:443"
 
   vue-ui:
     image: node:19.2.0-alpine3.16
@@ -63,17 +61,10 @@ services:
     command: sh -c "npm install && npm run dev"
     ports:
       - 5173:5173
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    networks:
-        - dev
-
+      
 networks:
     dev:
-        driver: bridge
-
 volumes:
     db-data:
-    
 
 
