--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "postcss": "^8.4.21",
     "prettier": "^2.7.1",
+    "sass": "^1.58.0",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
