--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
     working_dir: /app
     command: sh -c "npm install && npm run dev"
     restart: unless-stopped
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     ports:
       - "5173:5173"
     networks:
