--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -9,6 +9,8 @@ server {
 
     location / {
          try_files $uri $uri/ /index.php$is_args$args;
+         add_header "Access-Control-Allow-Origin"  *;
+         add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
     }
 
     location ~ \.php$ {
