--- a/docker/nginx/sites/default.conf
+++ b/docker/nginx/sites/default.conf
@@ -12,6 +12,9 @@ server {
     }
 
     location ~ \.php$ {
+        }
+        add_header 'Access-Control-Allow-Origin' '*';
+
         try_files $uri /index.php =404;
         fastcgi_pass php-upstream;
         fastcgi_index index.php;
