--- a/api/.env
+++ b/api/.env
@@ -43,7 +43,7 @@ PWD_EMAIL_USER=myproject.codeur@gmail.com
 
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://myproject.codeur@gmail.com:fx8KA5a4x7sL7E@smtp.gmail.com:465 
-MAILER_DSN=smtp://e2b0a57edce928:627cb92ed4dce0@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+# MAILER_DSN=smtp://api:477a07e07aa60606efe012c1b5514ab0@live.smtp.mailtrap.io:587?encryption=tls&auth_mode=login&verify_peer=0
 # MAILER_DSN=ses+BMsahNa97Dwl://AKIAVCAMZOZEJIKTFNXO:BMsahNa97Dwl+P0Rxvp6yL7uWF7mi1mgSh6mGgOtQuSi@default
 ###< symfony/mailer ###
 
@@ -54,7 +54,7 @@ MAILER_DSN=smtp://e2b0a57edce928:627cb92ed4dce0@smtp.mailtrap.io:2525?encryption
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-# MAILER_DSN=gmail://myproject.codeur@gmail.com:fx8KA5a4x7sL7E@localhost?verify_peer=0
+MAILER_DSN=	gmail+smtp.gmail.com://myproject.codeur@gmail.com:fx8KA5a4x7sL7E@default?verify_peer=0
 
 ###< symfony/google-mailer ###
 
