--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -18,8 +18,8 @@ jobs:
       run:
         working-directory: frontend
 
-      steps:
-        - use: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
         with:
