--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -30,33 +30,13 @@ jobs:
           npm ci
           npm run build
 
-deploy:
-  runs-on: ubuntu-latest
+      - name: Build Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: ${{ env.platforms }}
+          push: false
+          tags: "frontend:latest"
 
-  needs: build
-
-  steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        platforms: ${{ env.platforms }}
-        push: true
-        tags: "frontend:latest"
-
-    - name: Inspect
-      run: docker inspect --format='{{index .RepoDigests 0}}' frontend:latest
+      - name: Inspect
+        run: docker inspect --format='{{index .RepoDigests 0}}' frontend:latest
