--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -30,13 +30,20 @@ jobs:
           npm ci
           npm run build
 
-      - name: Build Docker Image
+      - name: Build Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ${{ env.workdir_frontend }}
+          file: ./Dockerfile
           platforms: ${{ env.platforms }}
-          push: false
-          tags: "frontend:latest"
-
-      - name: Inspect
-        run: docker inspect --format='{{index .RepoDigests 0}}' frontend:latest
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
