modif name tags

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -46,4 +46,4 @@ jobs:
           file: ./Dockerfile
           platforms: ${{ env.platforms }}
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+          tags: "frontend:latest"
