change dockerfile frontend

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -45,5 +45,5 @@ jobs:
           context: frontend
           file: frontend/Dockerfile
           platforms: ${{ env.platforms }}
-          push: true
+          load: true
           tags: "frontend:latest"
