--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -7,10 +7,6 @@ on:
   pull_request:
     branches: ["feature/ci-cd"]
 
-env:
-  platforms: "linux/amd64, linux/arm64/v8"
-  workdir_frontend: frontend
-
 jobs:
   build-frontend:
     runs-on: ubuntu-latest
@@ -20,15 +16,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
-
-      # - name: Install dependencies
-      #   run: |
-      #     npm ci
-      #     npm run build
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -44,9 +31,41 @@ jobs:
         with:
           context: frontend
           file: frontend/Dockerfile
-          # platforms: ${{ env.platforms }}
           load: true
           tags: "frontend:latest"
 
       - name: Run Docker Image
         run: docker run -d -p 3000:3000 frontend:latest
+
+  build-backend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Start PostgreSQL container
+          run : |
+            docker run --name challenge -e POSTGRES_PASSWORD=password -d challenge
+
+      - name: Build Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: api
+          file: api/php/Dockerfile
+          load: true
+          tags: "api:latest"
+
+      - name: Run Docker Image
+        run: docker run -d -p 5000:5000 api:latest
