--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Start PostgreSQL container
         run : |
-          docker run --name challenge -e POSTGRES_PASSWORD=password -d challenge
+          docker run --name challenge -e POSTGRES_PASSWORD=password -d postgres
 
       - name: Build Docker Buildx
         uses: docker/setup-buildx-action@v2
