--- a/api/php/Dockerfile
+++ b/api/php/Dockerfile
@@ -1,8 +1,8 @@
 FROM php:8.1-fpm
 
-COPY wait-for-it.sh /usr/bin/wait-for-it
+# COPY wait-for-it.sh /usr/bin/wait-for-it
 
-RUN chmod +x /usr/bin/wait-for-it
+# RUN chmod +x /usr/bin/wait-for-it
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends libssl-dev zlib1g-dev curl git unzip netcat libxml2-dev libpq-dev libzip-dev acl && \
