modif branch pull and push workflows

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,10 +2,10 @@ name: Build Docker Image
 
 on:
   push:
-    branches: ["feature/ci-cd"]
+    branches: ["feature/admin"]
 
   pull_request:
-    branches: ["feature/ci-cd"]
+    branches: ["feature/admin"]
 
 jobs:
   build-frontend:
