add branch for workflows

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,10 +2,10 @@ name: Build Docker Image
 
 on:
   push:
-    branches: ["feature/admin"]
+    branches: ["feature/admin", "main", "develop"]
 
   pull_request:
-    branches: ["feature/admin"]
+    branches: ["feature/admin", "main", "develop"]
 
 jobs:
   build-frontend:
