--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: ["feature/admin", "master", "develop"]
 
+env:
+  platforms: "linux/amd64, linux/arm64/v8"
+
 jobs:
   build-frontend:
     runs-on: ubuntu-latest
@@ -31,11 +34,9 @@ jobs:
         with:
           context: frontend
           file: frontend/Dockerfile
-          load: true
-          tags: "frontend:latest"
-
-      - name: Run Docker Image
-        run: docker run -d -p 3000:3000 frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/challenge-frontend:latest
+          push: true
+          platforms: ${{ env.platforms }}
 
   build-backend:
     runs-on: ubuntu-latest
@@ -64,8 +65,6 @@ jobs:
         with:
           context: api
           file: api/php/Dockerfile
-          load: true
-          tags: "api:latest"
-
-      - name: Run Docker Image
-        run: docker run -d -p 5000:5000 api:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/challenge-backend:latest
+          push: true
+          platforms: ${{ env.platforms }}
